bk_ida/gccida/c0/validate_change
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_change/src/recog.c:682:25: error: expected expression
changes = ( change_t_0 *)xrealloc( changes, 32LL * changes_allocated); 
                        ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_change/src/recog.c:682:13: error: use of undeclared identifier 'change_t_0'
changes = ( change_t_0 *)xrealloc( changes, 32LL * changes_allocated); 
            ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/validate_change/src/obj/recog.o] Error 1
